# funky-moose-rootflow-synth

./: .git_actions_jobs.json  .git_actions_runs.json  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  README.txt  README_de.md
.github/workflows/: build.yml
Source/: Info-App.plist  MatrixEnergyVisualizer.h  PlantEnergyVisualizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RootFlowDSP.h  RootFlowLookAndFeel.cpp  RootFlowLookAndFeel.h  RootFlowModulators.h  RootFlowMutation.cpp  RootFlowMutation.h  RootFlowOscillators.h  RootFlowPresets.cpp  RootFlowPresets.h  RootFlowSynthSound.h  RootFlowSynthVoice.h  RootFlowVoice.cpp  RootFlowVoice.h
Source/UI/: AtmosphericOverlay.h  BioSequencerComponent.h  BottomPanel.h  CenterComponent.h  EnergyDisplay.cpp  EnergyDisplay.h  MainLayoutComponent.h  NodeSystem.h  PulseMatrixSequencer.h  PulsePanel.h  RootPanel.h  SourcePanel.h
Source/UI/Utils/: DesignTokens.h
build-release/: CMakeCache.txt  Makefile  RootFlow_vst3_helper  cmake_install.cmake
build-release/RootFlow_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-release/RootFlow_artefacts/JuceLibraryCode/Release/: Defs.txt
build-release/RootFlow_artefacts/JuceLibraryCode/RootFlow_AU/: Info.plist
build-release/RootFlow_artefacts/JuceLibraryCode/RootFlow_Standalone/: Info.plist
build-release/RootFlow_artefacts/JuceLibraryCode/RootFlow_VST3/: Info.plist
build-release/RootFlow_artefacts/Release/AU/Funky Moose Rootflow Synth.component/Contents/: Info.plist
build-release/RootFlow_artefacts/Release/AU/Funky Moose Rootflow Synth.component/Contents/_CodeSignature/: CodeResources
build-release/RootFlow_artefacts/Release/Standalone/Funky Moose Rootflow Synth.app/Contents/: Info.plist
build-release/RootFlow_artefacts/Release/Standalone/Funky Moose Rootflow Synth.app/Contents/Resources/: Icon.icns
build-release/RootFlow_artefacts/Release/VST3/Funky Moose Rootflow Synth.vst3/Contents/: Info.plist
build-release/RootFlow_artefacts/Release/VST3/Funky Moose Rootflow Synth.vst3/Contents/Resources/: moduleinfo.json
build-release/RootFlow_artefacts/Release/VST3/Funky Moose Rootflow Synth.vst3/Contents/_CodeSignature/: CodeResources
build-release/juce_binarydata_RootFlowAssets/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  BinaryData4.cpp  BinaryData7.cpp  input_file_list
docs/: BUILDING.md  INSTALLATION.md  KNOWN_ISSUES.md
